Update bundled parmap.

--- a/Makefile.libs
+++ b/Makefile.libs
@@ -63,7 +63,7 @@ FLAGS_type_conv     =
 OPTFLAGS_type_conv  =
 
 # parmap library
-PARMAPDIR        = bundles/parmap/parmap-1.0-rc5-patched/_build
+PARMAPDIR        = bundles/parmap/parmap-1.0-rc7/_build
 LOCAL_parmap     = $(PARMAPDIR)/parmap.cma
 LOCALOPT_parmap  = $(PARMAPDIR)/parmap.cmxa
 GLOBAL_parmap    = $(PARMAPDIR)/parmap.cma
