--- a/bundles/parmap/Makefile
+++ b/bundles/parmap/Makefile
@@ -8,7 +8,7 @@ endif
 OCAMLCFLAGS ?= -g
 OPTFLAGS ?= -g
 
-PARMAP_VERSION=1.0-rc5-patched
+PARMAP_VERSION=1.0-rc7
 PARMAP_DIR=parmap-$(PARMAP_VERSION)
 PARMAP_ARCHIVE=parmap-$(PARMAP_VERSION).tar.gz
 PARMAP_MARKER=$(PARMAP_DIR)/.marker
