Fixed: Enforce bundled PyCaml corrected

--- a/configure.ac
+++ b/configure.ac
@@ -303,7 +303,7 @@ AS_IF([test "x$enable_python" != xno],
     AC_MSG_ERROR([the python scripts feature is enabled but the pkg-config python library is not found])
   ])
 
-  AC_SUBST([enable_pycaml], [no]])
+  AC_SUBST(enable_pycaml, [no]])
   AC_REQ_COCCI_EXTPKG([pycaml])
 
   AS_IF([test "x$AS_TR_SH([enable_pycaml])" = xlocal],
