--- a/Makefile.libs
+++ b/Makefile.libs
@@ -39,8 +39,8 @@ OPTFLAGS_pycaml  = $(CFLAGS_pycaml:%=-ccopt %) -cclib -lpycaml_stubs $(PYTHON_LI
 
 # pcre library
 # Note: see the comment of the pycaml library about the double appearance of the stubs library.
-LOCAL_pcre     = $(PCREDIR)/pcre.cmo
-LOCALOPT_pcre  = $(PCREDIR)/pcre.cmx
+LOCAL_pcre     = $(PCREDIR)/pcre.cma
+LOCALOPT_pcre  = $(PCREDIR)/pcre.cmxa
 GLOBAL_pcre    = $(PCREDIR)/pcre.cma
 GLOBALOPT_pcre = $(PCREDIR)/pcre.cmxa
 FLAGS_pcre     = $(PCRE_LIBS:%=-ccopt %) -dllib -lpcre_stubs -cclib -lpcre_stubs
