Fixed: Substitute make by $(MAKE) in Makefiles
Following Markus Elfring's via GitHub (Wed, 25 May 2016 02:55:00).

--- a/bundles/menhirLib/Makefile
+++ b/bundles/menhirLib/Makefile
@@ -18,7 +18,7 @@ all all.opt: .prepare menhir
 
 clean:
 	rm -rf menhir menhirLib.* share
-	- make -C $(MENHIRDIR) clean
+	- $(MAKE) -C $(MENHIRDIR) clean
 
 distclean: clean
 	rm -rf $(MENHIRDIR)
@@ -37,7 +37,7 @@ $(MENHIRDIR).tar.gz:
 depend: $(MENHIRMARKER) menhir
 
 menhir:
-	unset OCAMLLIB && make -C $(MENHIRDIR) PREFIX=$(CURDIR) all
+	unset OCAMLLIB && $(MAKE) -C $(MENHIRDIR) PREFIX=$(CURDIR) all
 	cp $(MENHIRDIR)/src/_stage2/menhir.native  menhir
 	cp $(MENHIRDIR)/src/_stage2/menhirLib.* .
 	mkdir -p share/menhir/
