Fixed: Bundles and some local patchs for OCaml from 3.12.0 to 4.03.0
- Menhir has been downgraded to 20140422: Menhir 20160504 makes use of
  constructs introduced in 4.02.0 like "match exception"
- Menhir, PCRE and parmap bundles have new Makefiles that allow us to
  compile them without ocamlbuild
- pycaml has a new Makefile that allows us to compile it without
  camlp4: we use the C preprocessor to handle #ifdef
- a subsidiary version of the Bytes module is provided to the PCRE
  bundle for OCaml prior to 4.02.0
- spatch --version no longer prints if the build is native or
  bytecode: the message relied on Dynlink.is_native that is not
  available if there is no dynlink
- unparse_c.ml makes use of String.map introduced in 4.00.0: an
  subsidiary implementation is provided if the builtin String.map
  is not available
- spgen/Makefile supposed that there is a valid dynlink path: it has
  been rewritten so that it does not try to link with dynlink if the
  latter is not available

--- a/bundles/menhirLib/Makefile
+++ b/bundles/menhirLib/Makefile
@@ -1,46 +1,73 @@
 # Bundles the original menhirLib package without modifications.
 # This Makefile integrates its build process with coccinelle.
 
-ifneq ($(MAKECMDGOALS),distclean)
-include ../../Makefile.config
--include ../../Makefile.local
-endif
+MENHIR_VERSION=20140422
 
-VERSION=20160504
-MENHIRDIR=menhir-$(VERSION)
-MENHIRMARKER=$(MENHIRDIR)/.marker
+PACKAGE_DIR=menhir-$(MENHIR_VERSION)
+TARBALL=menhir-$(MENHIR_VERSION).tar.gz
+MODULES= \
+	Fix IO installation keyword lineCount positions stringSet version \
+	settings printer action mark stringMap misc breadth codeBits gSet \
+	compressedBitSet option dot error parameters parserAux parser lexer \
+	tarjan unionFind parameterizedGrammar partialGrammar time preFront \
+	tokenType interface lexdep lexmli infer listMonad \
+	nonTerminalDefinitionInlining reachability unparameterizedPrinter \
+	front gMap patricia grammar codePieces item derivation menhirLib \
+	lr0 slr lr1 lr1partial conflict invariant codeBackend coqBackend \
+	pprint cst traverse inliner referenceInterpreter sentenceParser \
+	sentenceLexer interpret tableBackend back menhir
+PRODUCTS=lexer lexdep lexmli parser sentenceLexer sentenceParser
+SIDEPRODUCTS=menhir menhirLib.cmi menhirLib.cmx menhirLib.cmo menhirLib.o
+OTHERS=share/menhir/standard.mly
+SRC_DIR=$(PACKAGE_DIR)/src
 
-all all.opt: .prepare menhir
+OCAMLLDFLAGS=unix.cmxa
 
-# prepares the source bundle for building.
-.prepare: $(MENHIRMARKER)
-	touch .prepare
+MENHIRLIB_MODULES= \
+	infiniteArray packedIntArray rowDisplacement engineTypes engine \
+	tableFormat tableInterpreter convert
 
-clean:
-	rm -rf menhir menhirLib.* share
-	- $(MAKE) -C $(MENHIRDIR) clean
+include ../Makefile.bundles
 
-distclean: clean
-	rm -rf $(MENHIRDIR)
-	rm -f .prepare
+depend: .depend
+	@$(MAKE) all-build
 
-$(MENHIRMARKER): $(MENHIRDIR).tar.gz
-	$(TAR) xfvz $<
+.prepare: $(MARKER)
+	echo "let libdir = \"$(shell pwd\)\"" > $(SRC_DIR)/installation.ml
+	echo "let ocamlfind = false" >> $(SRC_DIR)/installation.ml
 	touch $@
 
-$(MENHIRDIR).tar.gz:
-	@echo "$@ not found. Please download it and drop it in this directory ($(pwd))."
-	@false
+%.cmo: %.ml
+	if echo $(MENHIRLIB_MODULES) | grep -w $(notdir $(basename $<)); then \
+	  $(OCAMLC_CMD) -for-pack MenhirLib -c $< -o $@; \
+	else \
+	  $(OCAMLC_CMD) -c $< -o $@; \
+	fi
 
-.PHONY: all all.opt clean distclean depend
+%.cmx: %.ml
+	if echo $(MENHIRLIB_MODULES) | grep -w $(notdir $(basename $<)); then \
+	  $(OCAMLOPT_CMD) -for-pack MenhirLib -c $< -o $@; \
+	else \
+	  $(OCAMLOPT_CMD) -c $< -o $@; \
+	fi
 
-depend: $(MENHIRMARKER) menhir
+$(SRC_DIR)/menhir: $(patsubst %,$(SRC_DIR)/%.cmx,$(MODULES))
+	$(OCAMLOPT_CMD) $(OCAMLLDFLAGS) $^ -o $@
 
-menhir:
-	unset OCAMLLIB && $(MAKE) -C $(MENHIRDIR) PREFIX=$(CURDIR) all
-	cp $(MENHIRDIR)/src/_stage2/menhir.native  menhir
-	cp $(MENHIRDIR)/src/_stage2/menhirLib.* .
+share/menhir/standard.mly: $(SRC_DIR)/standard.mly
 	mkdir -p share/menhir/
-	cp $(MENHIRDIR)/src/standard.mly share/menhir/
+	cp $< $@
 
-include ../../Makefile.common
+$(SRC_DIR)/menhirLib.cmx: \
+	$(patsubst %,$(SRC_DIR)/%.cmx,$(MENHIRLIB_MODULES))
+	$(OCAMLOPT_CMD) -pack $^ -o $@
+
+$(SRC_DIR)/menhirLib.cmo: \
+	$(patsubst %,$(SRC_DIR)/%.cmo,$(MENHIRLIB_MODULES))
+	$(OCAMLC_CMD) -pack $^ -o $@
+
+$(SRC_DIR)/parser.mly: $(SRC_DIR)/yacc-parser.mly
+	cp $< $@
+
+menhir: $(SRC_DIR)/menhir
+	cp $< $@
