Fixed: make distclean failed on a fresh repo

--- a/tools/spgen/documentation/Makefile
+++ b/tools/spgen/documentation/Makefile
@@ -6,8 +6,10 @@
 # Requires a few standard LaTeX packages.
 
 ifneq ($(MAKECMDGOALS),distclean)
+ifneq ($(MAKECMDGOALS),clean)
 include ../../../Makefile.config
 -include ../../../Makefile.local
+endif
 endif
 
 
