Fixed: Sources in Pycaml bundles
pycaml_stubs.c is distributed directly (as well as pycaml.pp.ml), instead
of applying all the patches.
Patchs are still distributed but are no longer used by the Makefile.

--- a/bundles/pycaml/Makefile
+++ b/bundles/pycaml/Makefile
@@ -18,12 +18,7 @@ export PYMAJOR=$(shell echo ${PYTHON_VERSION} | sed -e 's/\..*//')
 include ../Makefile.bundles
 
 .prepare: $(MARKER)
-#	$(PATCH) -d "$(SRC_DIR)" -p1 < ./python3-compat-fix.patch
-#	$(PATCH) -d "$(SRC_DIR)" -p1 < ./pyunicodeapichanges-fix.patch
-	- $(PATCH) -d "$(SRC_DIR)" -p2 < ./removeunicode.patch
-	- $(PATCH) -d "$(SRC_DIR)" -p1 < ./ignoreheader.patch
-	- $(PATCH) -d "$(SRC_DIR)" -p1 < ./elim-warnings.patch
-	- $(PATCH) -d "$(SRC_DIR)" -p1 < ./python3-strings-classes.patch
 	rm -f "$(SRC_DIR)/pycaml.mli"
 	$(CC) -E -w -D PYMAJOR$(PYMAJOR) -xc pycaml.pp.ml >$(SRC_DIR)/pycaml.ml
+	cp pycaml_stubs.c $(SRC_DIR)/pycaml_stubs.c
 	touch $@
