Fixed: The build of parser_cocci_menhir.ml/mli now depends on menhir
The files parser_cocci_menhir.ml/mli are kept by make clean.
If menhir has been updated, these files are now reconstructed.

--- a/parsing_cocci/Makefile
+++ b/parsing_cocci/Makefile
@@ -94,7 +94,8 @@ clean::
 $(LEXER_SOURCES:.mll=.ml) :	$(LEXER_SOURCES)
 	$(OCAMLLEX) $(LEXER_SOURCES)
 
-$(PARSER_SOURCES:.mly=.ml) $(PARSER_SOURCES:.mly=.mli) : $(PARSER_SOURCES)
+$(PARSER_SOURCES:.mly=.ml) $(PARSER_SOURCES:.mly=.mli) : \
+	$(PARSER_SOURCES) $(MENHIR)
 	$(MENHIR) --ocamlc "${OCAMLC}" --ocamldep "${OCAMLDEP}" --table --base parser_cocci_menhir $(PARSER_SOURCES)
 
 $(CLI_LEXER_SOURCES:.mll=.ml): $(CLI_LEXER_SOURCES)
