Fixed: Support native spgen.opt in spgen script
The script spgen now detects and executes spgen.opt.
(Reported by Amitoj Kaur Chawla.)

--- a/tools/spgen/scripts/spgen.sh.in
+++ b/tools/spgen/scripts/spgen.sh.in
@@ -3,8 +3,18 @@
 # See copyright.txt in the Coccinelle source code for more information.
 # The Coccinelle source code can be obtained at http://coccinelle.lip6.fr
 
-TARGET=spgen
-exec_prefix=@prefix@
-LIBDIR=@libdir@/coccinelle/spgen""
+exec_prefix="@prefix@"
+LIBDIR="@libdir@"/coccinelle/spgen
 
-exec ""${LIBDIR}/${TARGET}"" "$@"
+if [ -f "$LIBDIR"/spgen ]
+then
+    TARGET=spgen
+elif [ -f "$LIBDIR"/spgen.opt ]
+then
+    TARGET=spgen.opt
+else
+    echo Unable to find spgen executable. >/dev/fd/2
+    exit 1
+fi
+
+exec "$LIBDIR/$TARGET" "$@"
